2025-07-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha01: Department Q';git push
	git tag -a 5.3.5-alpha01 -m 'Functionally identical to 5.3.4 except some documentation ';git push --tags

	* nco.texi update Forward

2025-07-01  Charlie Zender  <zender@uci.edu>

	* Document more examples of ncra --per-record-weighting (--prw)

2025-06-22  Charlie Zender  <zender@uci.edu>

	* Document locations for input/output PS with vrt_in vrt_out

2025-06-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4: Fourth Place Fourth Time';git push
	git tag -a 5.3.4 -m 'all: --gad glb att del; ncclimo: nfr tpd/dpf when !tm_bnds, use is_hrz; ncks: --is_hrz, S1D add lut_out=789 option, frc_column add urb_all, sng att prn ln brk; ncrcat: !mnt_chk bnd; ncremap cxl alg_typ=tempest';git push --tags

2025-06-15  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4-beta01: Trombone Shorty at The Greek';git push
	git tag -a 5.3.4-beta01 -m 'all: --gad glb att del; ncclimo: nfr tpd/dpf when !tm_bnds, use is_hrz; ncks: --is_hrz, S1D add lut_out=789 option, frc_column add urb_all, sng att prn ln brk; ncrcat: !mnt_chk bnd; ncremap cxl alg_typ=tempest';git push --tags

	* Document NC_STRING printing, "alg_typ=tempest" deprecation

2025-06-12  Charlie Zender  <zender@uci.edu>

	* Document --lut=789 and frc_column, frc_landunit in nco.texi/release notes

2025-06-11  Charlie Zender  <zender@uci.edu>

	* Document --gad and --is_hrz in release notes

	* Document --is_hrz in nco.texi

2025-06-10  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.4-alpha06 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4-alpha06: Maximum Burn Rate';git push
	git tag -a 5.3.4-alpha06 -m 'ncclimo: skp hrz var; ncks: --is_hrz, nco_var_is_hrz()';git push --tags
